[workspace]
members = [
    # Libs
    "libs/lua_docs",
    "libs/apollo",
    "libs/apollo-macro",
    "libs/apollo-docs",
    # Client
    "client",
    "client/libs/rsa-client-graphics",
    "client/libs/rsa-client-player",
    "client/libs/rsa-client-gui",
    "client/libs/rsa-client-core",
    # Server
    "server",
    "server/libs/rsa-registry",
    "server/libs/rsa-core",
    "server/libs/rsa-item",
    "server/libs/rsa-network",
    "server/libs/rsa-player",
    "server/libs/rsa-world",
    "server/libs/rsa-hash",
]
