[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria = { path = "../" }
rsa-core = { path = "../libs/rsa-core" }
rsa-world = { path = "../libs/rsa-world" }
rsa-network = { path = "../libs/rsa-network" }
rsa-player = { path = "../libs/rsa-player" }

rsaclient-core = { path = "../libs/rsaclient-core" }
rsaclient-graphics = { path = "../libs/rsaclient-graphics" }
rsaclient-player = { path = "../libs/rsaclient-player" }

apollo = { path = "../libs/apollo", features = ["luajit", "vendored", "serialize", "macro"] }
glfw = { version = "0.45.0", features = ["image"] }
glium = { git = "https://github.com/alphaqu/glium", default-features = false, features = [] }


