[package]
name = "rustaria-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria-server = { path = "../server" }
rsa-core = { path = "../server/libs/rsa-core" }
rsa-world = { path = "../server/libs/rsa-world" }
rsa-registry = { path = "../server/libs/rsa-registry" }
rsa-hash = { path = "../server/libs/rsa-hash" }
rsa-network = { path = "../server/libs/rsa-network" }
rsa-player = { path = "../server/libs/rsa-player" }

rsa-client-core = { path = "libs/rsa-client-core" }
rsa-client-graphics = { path = "libs/rsa-client-graphics" }
rsa-client-player = { path = "libs/rsa-client-player" }

apollo = { path = "../libs/apollo", features = ["luajit", "vendored", "serialize", "macro"] }
glfw = { version = "0.45.0", features = ["image"] }
glium = { git = "https://github.com/alphaqu/glium", default-features = false, features = [] }


