[package]
name = "rustaria-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria = { version = "*", path = "../" }

mlua = { version = "0.7.1", features = ["luajit", "vendored", "serialize"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "fs"] }
wgpu = { version = "0.12.0" }
winit = "0.26.0"
naga = "0.8.1"
eyre = "0.6.5"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.5", features = ["env-filter", "time"] }
bytemuck = { version = "1.7.3", features = ["derive"] }
image = "0.23.14"
rectangle-pack = "0.4.2"
structopt = "0.3.25"
