[package]
name = "rustaria-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria = { version = "*", path = "../" }
opengl-render = { path  = "./opengl-render"}
glfw = "0.43.0"

mlua = { version = "0.7.1", features = ["lua54", "vendored"] }
eyre = "0.6.5"
tracing = "0.1.29"
tracing-futures = "0.2.5"
bytemuck = { version = "1.7.3", features = ["derive"] }
image = "0.24.0"
rectangle-pack = "0.4.2"
structopt = "0.3.25"
laminar = "0.5.0"
bincode = "1.3.3"
crossbeam = "0.8.1"

[features]
