[package]
name = "rustaria-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria = { path = "../" }

mlua = { version = "0.7.1", features = ["luajit", "vendored"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
eyre = "0.6.5"
structopt = "0.3.25"