[package]
name = "rustaria-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria = { path = "../" }

tracing = "0.1.29"
tracing-futures = "0.2.5"
eyre = "0.6.5"
structopt = "0.3.25"
toml = "0.5.8"
serde = "1.0.136"
crossbeam = "0.8.1"
