[package]
name = "rsa-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rustaria Modules
rsa-common = { path = "../../libs/rsa-common" }

# Rendering Dependencies
opengl-render = { path  = "opengl-render" }
glfw = "0.43.0"

# Other
eyre = "0.6.5"
tracing = "0.1.29"
image = { version = "0.24.0", default-features = false, features = ["png"]}
structopt = "0.3.25"

[features]
