[package]
name = "aloy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opengl = { path = "opengl-raw" }
tracing = "0.1"
image = { version = "0.24", default-features = false, features = ["png"] }
rectangle-pack = "0.4"
eyre = "0.6"