[package]
name = "apollo_docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.91", features = ["full", "parsing"] }
quote = "1.0.18"
proc-macro2 = { version = "1.0.37", features = ["span-locations"] }
proc-macro-crate = "1.1.3"
lua_docs = { path = "../lua_docs" }
chrono = "0.4.19"

anyways = "*"
