[package]
name = "apollo"
version = "0.0.1"
license = "MIT"
build = "build/main.rs"
edition = "2021"

[package.metadata.docs.rs]
features = ["lua54", "vendored", "async", "send", "serialize", "macros"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
lua54 = []
lua53 = []
lua52 = []
lua51 = []
luajit = []
luajit52 = ["luajit"]
vendored = ["luajit-src"]
async = ["futures-core", "futures-task", "futures-util"]
send = []
macro = ["apollo-macro"]
serialize = ["serde", "erased-serde"]

[dependencies]
anyways = "*"
owo-colors = "3.4.0"
bstr = { version = "0.2", features = ["std"], default_features = false }
once_cell = { version = "1.0" }
num-traits = { version = "0.2.14" }
rustc-hash = "1.0"
futures-core = { version = "0.3.5", optional = true }
futures-task = { version = "0.3.5", optional = true }
futures-util = { version = "0.3.5", optional = true }
crossbeam = "0.8.1"
apollo-macro = { path = "../apollo-macro", optional = true }
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }
log = "0.4.17"

[build-dependencies]
cc = { version = "1.0" }
pkg-config = { version = "0.3.17" }
luajit-src = { version = ">= 210.3.1, < 220.0.0", optional = true }
