[package]
name = "rsa-client-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
rsa-client-core = { path = "../rsa-client-core" }

apollo = { path = "../apollo", features = ["luajit", "vendored", "serialize", "macro"] }

