[package]
name = "rsa-item"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
apollo = { path = "../apollo" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rsa-core = { path = "../rsa-core", features = ["test-utils"] }
