[package]
name = "rsa-item"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
apollo = { path = "../apollo", features = ["luajit", "vendored", "serialize", "macro"] }


[features]
testing = ["rsa-core/testing"]
