[package]
name = "rsa-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-api = { path = "../rsa-api" }
rsa-chunk = { path = "../rsa-chunk" }
rsa-common = { path = "../rsa-common" }

bincode = "1.3.3"
lz4 = "1.23.2"
eyre = "0.6.5"
serde = { version = "1.0.133", features = ["derive"] }
laminar = "0.5.0"
crossbeam = "0.8.1"
tracing = "0.1.29"
