[package]
name = "rsa-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
serde = { version = "1.0.137", features = ["derive"] }

laminar = "0.5.0"
bincode = "1.3.3"