[package]
name = "rsa-registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-hash = { path = "../rsa-hash" }

anyways = "*"

num = "0.4"
log = "0.4"
ahash = "0.8"
serde = { version = "1", features = ["derive"] }
apollo = { path = "../apollo", features = ["luajit", "vendored", "serialize", "macro"] }

[features]
