[package]
name = "rsa-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-api = { path = "../rsa-api" }
rsa-chunk = { path = "../rsa-chunk" }
rsa-comps = { path = "../rsa-comps" }
rsa-common = { path = "../rsa-common" }
