[package]
name = "rsac-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
rectangle-pack = "0.4"
glfw = { version = "0.44", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
