[package]
name = "rsac-glium-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
rsac-backend = { path = "../rsac-backend" }
glfw = "0.44"


# Custom version with textures set to Nearest. Yes i needed to fork just for that.
glium = { git = "https://github.com/alphaqu/glium", default-features = false }
image = { version = "0.24", default-features = false }
