[package]
name = "rsac-graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
rsa-input = { path = "../rsa-input" }
rustaria = { path = "../../", features = ["client"] }

rectangle-pack = "0.4"
glfw = { version = "0.44", features = ["image"] }
rayon = "1.5.3"
dashmap = "5.3.4"
thiserror = "1.0.31"

glium = { git = "https://github.com/alphaqu/glium", default-features = false }
image = { version = "0.24", default-features = false, features = ["png"] }