[package]
name = "rsac-rendering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa-core = { path = "../rsa-core" }
rsac-backend = { path = "../rsac-backend" }
rustaria = { path = "../../", features = ["client"] }

