[package]
name = "rustaria-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base
rustaria-util = { path = "../rustaria-util" }

# Error
thiserror = "1.0.30"


# Plugins
mlua = { git = "https://github.com/alphaqu/mlua",  features = ["lua54", "vendored", "serialize", "send"] }
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
serde_json = "1.0"
zip = "0.5"
parking_lot = "0.12.0"

# Registries
type-map = "0.5"


