[package]
name = "rustaria-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Base
rustaria-util = { path = "../rustaria-util" }

# Error
thiserror = "1.0.30"
eyre = "0.6.8"

# Plugins
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", features = ["serde"] }
serde_json = "1.0"
zip = { version = "0.6.2", default-features = false, features = ["deflate"] }

# Registries
type-map = "0.5"


