[package]
name = "rustaria-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustaria-util = { path = "../rustaria-util" }
rustaria-api = { path = "../rustaria-api" }
rustaria = { path = "../../" }
aloy = { path = "../aloy" }
glfw = "0.44.0"
image = { version = "0.24.0", default-features = false, features = ["png"] }
